# monero-rust-miner

./: Config.toml.example  LICENSE  README.md
docs/: usage.md
modules/mining_engine/: Cargo.toml  build.rs  randomx_wrapper.c  randomx_wrapper.h
modules/mining_engine/src/: huge_pages.rs  lib.rs
modules/mining_engine/src/tests/: huge_pages_tests.rs
modules/rpc_connector/: Cargo.toml
modules/rpc_connector/src/: lib.rs
monero-rust-miner/: .gitignore  Cargo.toml  Config.toml.example  README.md
monero-rust-miner/modules/mining_engine/: Cargo.toml  build.rs
monero-rust-miner/modules/mining_engine/src/: randomx_ffi.rs
monero-rust-miner/modules/mining_engine/src/tests/: engine_tests.rs
monero-rust-miner/modules/rpc_connector/: Cargo.toml
monero-rust-miner/modules/rpc_connector/src/: lib.rs
monero-rust-miner/src/: config.rs  logging.rs  main.rs
monero-rust-miner/src/tests/: config_tests.rs  logging_tests.rs  main_tests.rs
src/: main.rs
