# monero-rust-miner/Cargo.toml
[workspace]
members = [
    ".",
    "modules/rpc_connector",
    "modules/mining_engine",
]
resolver = "2"

[package]
name = "monero-rust-miner"
version = "1.0.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"] # ЗАМЕНИТЬ
description = "High-performance Monero CPU miner implemented in Rust for solo mining with local node integration."
license = "MIT"
repository = "https://github.com/yourusername/monero-rust-miner" # ЗАМЕНИТЬ
readme = "README.md"
keywords = ["monero", "miner", "cpu", "randomx", "cryptocurrency", "solo-mining"]
categories = ["command-line-utilities", "cryptography::cryptocurrencies"]
publish = false

[dependencies]
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "sync", "time", "signal"] }
anyhow = "1.0.98"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
confy = "0.6.1"
num_cpus = "1.17.0"
hex = "0.4.3"
clap = { version = "4.5.9", features = ["derive"] }

monero-rpc-connector = { path = "modules/rpc_connector" }
monero-mining-engine = { path = "modules/mining_engine" }

[dev-dependencies]
lazy_static = "1.5.0"
wiremock = { version = "0.6.0", optional = true }
tempfile = "3.10.1" # Added for temporary file creation in tests
toml = "0.8.13" # Added for parsing TOML in config tests

[features]
default = []
rpc_tests = ["dep:wiremock"]
portable_build = ["monero-mining-engine/portable_build"]
