[package]
name = "monero-rpc-connector"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
reqwest = { version = "0.11.27", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
thiserror = "1.0"
url = "2.5.0"
monero = { version = "0.18.0", features = ["serde"] }
